/// Cross-region replication for MooseNG
/// Handles efficient data replication between regions with conflict resolution

use anyhow::{Result, anyhow};
use std::collections::{HashMap, VecDeque};
use std::sync::Arc;
use std::time::{Duration, Instant};
use tokio::sync::{RwLock, Mutex, broadcast, mpsc};
use tokio::time::{interval, timeout};
use tracing::{debug, info, warn, error};
use serde::{Serialize, Deserialize};

use crate::multiregion::{
    MultiregionConfig, RegionPeer, HLCTimestamp, HybridLogicalClock,
    consistency::ConsistencyLevel,
};
use crate::raft::{
    log::{LogEntry, LogCommand},
    state::{LogIndex, Term, NodeId},
};

/// Cross-region replication manager
pub struct CrossRegionReplicator {
    /// Local region configuration
    config: MultiregionConfig,
    
    /// HLC for ordering events
    hlc: Arc<RwLock<HybridLogicalClock>>,
    
    /// Replication streams to peer regions
    replication_streams: Arc<RwLock<HashMap<u32, ReplicationStream>>>,
    
    /// Pending operations queue
    pending_operations: Arc<Mutex<VecDeque<ReplicationOperation>>>,
    
    /// Conflict resolver
    conflict_resolver: Arc<ConflictResolver>,
    
    /// Shutdown signal
    shutdown_tx: broadcast::Sender<()>,
}

/// A single replication stream to a peer region
#[derive(Debug)]
struct ReplicationStream {
    peer: RegionPeer,
    last_replicated_index: LogIndex,
    last_successful_replication: Instant,
    retry_count: u32,
    is_healthy: bool,
    pending_acks: HashMap<LogIndex, Instant>,
}

/// Operation to be replicated across regions
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ReplicationOperation {
    pub operation_id: String,
    pub timestamp: HLCTimestamp,
    pub source_region: u32,
    pub log_entry: LogEntry,
    pub consistency_level: ConsistencyLevel,
    pub replicas_required: u32,
}

/// Acknowledgment of successful replication
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ReplicationAck {
    pub operation_id: String,
    pub region_id: u32,
    pub timestamp: HLCTimestamp,
    pub status: ReplicationStatus,
}

/// Status of replication attempt
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum ReplicationStatus {
    Success,
    Failed(String),
    Conflict(ConflictInfo),
}

/// Information about a replication conflict
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ConflictInfo {
    pub conflicting_operation_id: String,
    pub conflicting_timestamp: HLCTimestamp,
    pub resolution_strategy: ConflictResolutionStrategy,
}

/// Strategy for resolving conflicts
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum ConflictResolutionStrategy {
    LastWriterWins,
    FirstWriterWins,
    MergeValues,
    CustomResolution(String),
}

impl CrossRegionReplicator {
    pub fn new(
        config: MultiregionConfig,
        hlc: Arc<RwLock<HybridLogicalClock>>,
    ) -> Self {
        let (shutdown_tx, _) = broadcast::channel(1);
        let conflict_resolver = Arc::new(ConflictResolver::new());
        
        Self {
            config,
            hlc,
            replication_streams: Arc::new(RwLock::new(HashMap::new())),
            pending_operations: Arc::new(Mutex::new(VecDeque::new())),
            conflict_resolver,
            shutdown_tx,
        }
    }
    
    pub async fn start(&self) -> Result<()> {
        info!("Starting cross-region replicator for region {}", self.config.region_id);
        
        // Initialize replication streams
        self.initialize_streams().await?;
        
        // Start replication worker
        self.start_replication_worker().await?;
        
        // Start acknowledgment processor
        self.start_ack_processor().await?;
        
        // Start health monitor
        self.start_health_monitor().await?;
        
        Ok(())
    }
    
    pub async fn stop(&self) -> Result<()> {
        let _ = self.shutdown_tx.send(());
        Ok(())
    }
    
    /// Initialize replication streams to all peer regions
    async fn initialize_streams(&self) -> Result<()> {
        let mut streams = self.replication_streams.write().await;
        
        for peer in &self.config.peer_regions {
            let stream = ReplicationStream {
                peer: peer.clone(),
                last_replicated_index: 0,
                last_successful_replication: Instant::now(),
                retry_count: 0,
                is_healthy: true,
                pending_acks: HashMap::new(),
            };
            
            streams.insert(peer.region_id, stream);
            info!("Initialized replication stream to region {}", peer.region_id);
        }
        
        Ok(())
    }
    
    /// Start the main replication worker
    async fn start_replication_worker(&self) -> Result<()> {
        let pending_ops = self.pending_operations.clone();
        let streams = self.replication_streams.clone();
        let config = self.config.clone();
        let hlc = self.hlc.clone();
        let mut shutdown_rx = self.shutdown_tx.subscribe();
        
        tokio::spawn(async move {
            let mut replication_interval = interval(Duration::from_millis(100));
            replication_interval.set_missed_tick_behavior(tokio::time::MissedTickBehavior::Skip);
            
            loop {
                tokio::select! {
                    _ = replication_interval.tick() => {
                        if let Err(e) = Self::process_replication_queue(
                            &pending_ops,
                            &streams,
                            &config,
                            &hlc,
                        ).await {
                            warn!("Replication processing failed: {}", e);
                        }
                    }
                    _ = shutdown_rx.recv() => {
                        info!("Replication worker shutting down");
                        break;
                    }
                }
            }
        });
        
        Ok(())
    }
    
    /// Process pending replication operations
    async fn process_replication_queue(
        pending_ops: &Arc<Mutex<VecDeque<ReplicationOperation>>>,
        streams: &Arc<RwLock<HashMap<u32, ReplicationStream>>>,
        config: &MultiregionConfig,
        hlc: &Arc<RwLock<HybridLogicalClock>>,
    ) -> Result<()> {
        let mut operations = pending_ops.lock().await;
        let mut streams_guard = streams.write().await;
        
        while let Some(operation) = operations.pop_front() {
            // Update our HLC with the operation timestamp
            {
                let mut hlc_guard = hlc.write().await;
                if let Err(e) = hlc_guard.update(operation.timestamp) {
                    warn!("Failed to update HLC: {}", e);
                }
            }
            
            // Determine target regions based on consistency level
            let target_regions = Self::select_target_regions(&operation, config, &streams_guard);
            
            // Send to target regions
            for region_id in target_regions {
                if let Some(stream) = streams_guard.get_mut(&region_id) {
                    if stream.is_healthy {
                        if let Err(e) = Self::send_replication_request(stream, &operation).await {
                            warn!("Failed to send replication to region {}: {}", region_id, e);
                            stream.retry_count += 1;
                            stream.is_healthy = stream.retry_count < 3;
                        } else {
                            stream.pending_acks.insert(
                                operation.log_entry.index,
                                Instant::now(),
                            );
                        }
                    }
                }
            }
        }
        
        Ok(())
    }
    
    /// Select target regions for replication based on consistency requirements
    fn select_target_regions(
        operation: &ReplicationOperation,
        config: &MultiregionConfig,
        streams: &HashMap<u32, ReplicationStream>,
    ) -> Vec<u32> {
        let healthy_regions: Vec<_> = streams
            .iter()
            .filter(|(_, stream)| stream.is_healthy)
            .map(|(id, _)| *id)
            .collect();
        
        match operation.consistency_level {
            ConsistencyLevel::Strong => {
                // Strong consistency requires all regions
                healthy_regions
            }
            ConsistencyLevel::BoundedStaleness(_) => {
                // Bounded staleness requires majority of regions
                let majority_count = (config.peer_regions.len() + 1) / 2; // +1 for ourselves
                healthy_regions.into_iter().take(majority_count).collect()
            }
            ConsistencyLevel::Session => {
                // Session consistency requires at least one other region
                healthy_regions.into_iter().take(1).collect()
            }
            ConsistencyLevel::Eventual => {
                // Eventual consistency - best effort to all healthy regions
                healthy_regions
            }
        }
    }
    
    /// Send replication request to a specific region
    async fn send_replication_request(
        _stream: &mut ReplicationStream,
        _operation: &ReplicationOperation,
    ) -> Result<()> {
        // TODO: Implement actual network transmission
        // This would involve:
        // 1. Serializing the operation
        // 2. Sending via gRPC/HTTP to the peer region
        // 3. Handling network errors and timeouts
        
        // For now, simulate successful transmission
        debug!("Simulating replication request transmission");
        tokio::time::sleep(Duration::from_millis(10)).await;
        
        Ok(())
    }
    
    /// Start acknowledgment processor
    async fn start_ack_processor(&self) -> Result<()> {
        let streams = self.replication_streams.clone();
        let conflict_resolver = self.conflict_resolver.clone();
        let mut shutdown_rx = self.shutdown_tx.subscribe();
        
        // Create channel for receiving acknowledgments
        let (ack_tx, mut ack_rx) = mpsc::unbounded_channel::<ReplicationAck>();
        
        tokio::spawn(async move {
            loop {
                tokio::select! {
                    Some(ack) = ack_rx.recv() => {
                        if let Err(e) = Self::process_acknowledgment(
                            &streams,
                            &conflict_resolver,
                            ack,
                        ).await {
                            warn!("Failed to process acknowledgment: {}", e);
                        }
                    }
                    _ = shutdown_rx.recv() => {
                        info!("Acknowledgment processor shutting down");
                        break;
                    }
                }
            }
        });
        
        Ok(())
    }
    
    /// Process a replication acknowledgment
    async fn process_acknowledgment(
        streams: &Arc<RwLock<HashMap<u32, ReplicationStream>>>,
        conflict_resolver: &Arc<ConflictResolver>,
        ack: ReplicationAck,
    ) -> Result<()> {
        let mut streams_guard = streams.write().await;
        
        if let Some(stream) = streams_guard.get_mut(&ack.region_id) {
            // Remove from pending acks
            stream.pending_acks.retain(|_, timestamp| {
                timestamp.elapsed() < Duration::from_secs(60) // Keep for 1 minute
            });
            
            match ack.status {
                ReplicationStatus::Success => {
                    stream.last_successful_replication = Instant::now();
                    stream.retry_count = 0;
                    stream.is_healthy = true;
                    debug!("Successful replication to region {}", ack.region_id);
                }
                ReplicationStatus::Failed(reason) => {
                    stream.retry_count += 1;
                    stream.is_healthy = stream.retry_count < 3;
                    warn!("Replication failed to region {}: {}", ack.region_id, reason);
                }
                ReplicationStatus::Conflict(conflict_info) => {
                    warn!("Replication conflict in region {}: {:?}", ack.region_id, conflict_info);
                    
                    // Handle conflict resolution
                    if let Err(e) = conflict_resolver.resolve_conflict(&ack, &conflict_info).await {
                        error!("Failed to resolve conflict: {}", e);
                    }
                }
            }
        }
        
        Ok(())
    }
    
    /// Start health monitoring for replication streams
    async fn start_health_monitor(&self) -> Result<()> {
        let streams = self.replication_streams.clone();
        let config = self.config.clone();
        let mut shutdown_rx = self.shutdown_tx.subscribe();
        
        tokio::spawn(async move {
            let mut health_interval = interval(Duration::from_secs(30));
            health_interval.set_missed_tick_behavior(tokio::time::MissedTickBehavior::Skip);
            
            loop {
                tokio::select! {
                    _ = health_interval.tick() => {
                        Self::monitor_stream_health(&streams, &config).await;
                    }
                    _ = shutdown_rx.recv() => {
                        info!("Health monitor shutting down");
                        break;
                    }
                }
            }
        });
        
        Ok(())
    }
    
    /// Monitor health of replication streams
    async fn monitor_stream_health(
        streams: &Arc<RwLock<HashMap<u32, ReplicationStream>>>,
        config: &MultiregionConfig,
    ) {
        let mut streams_guard = streams.write().await;
        
        for (region_id, stream) in streams_guard.iter_mut() {
            let time_since_success = stream.last_successful_replication.elapsed();
            let max_lag = config.max_replication_lag;
            
            if time_since_success > max_lag && stream.is_healthy {
                warn!("Region {} unhealthy: {}s since last success", 
                      region_id, time_since_success.as_secs());
                stream.is_healthy = false;
            } else if time_since_success <= max_lag && !stream.is_healthy {
                info!("Region {} recovered", region_id);
                stream.is_healthy = true;
                stream.retry_count = 0;
            }
        }
    }
    
    /// Add operation to replication queue
    pub async fn replicate_operation(&self, operation: ReplicationOperation) -> Result<()> {
        let mut pending = self.pending_operations.lock().await;
        pending.push_back(operation);
        Ok(())
    }
    
    /// Get replication status for all regions
    pub async fn get_replication_status(&self) -> HashMap<u32, RegionReplicationStatus> {
        let streams = self.replication_streams.read().await;
        let mut status = HashMap::new();
        
        for (region_id, stream) in streams.iter() {
            status.insert(*region_id, RegionReplicationStatus {
                region_id: *region_id,
                region_name: stream.peer.region_name.clone(),
                is_healthy: stream.is_healthy,
                last_successful_replication: stream.last_successful_replication,
                retry_count: stream.retry_count,
                pending_operations: stream.pending_acks.len(),
            });
        }
        
        status
    }
}

/// Status of replication to a specific region
#[derive(Debug, Clone)]
pub struct RegionReplicationStatus {
    pub region_id: u32,
    pub region_name: String,
    pub is_healthy: bool,
    pub last_successful_replication: Instant,
    pub retry_count: u32,
    pub pending_operations: usize,
}

/// Conflict resolution manager
pub struct ConflictResolver {
    resolution_strategies: HashMap<String, ConflictResolutionStrategy>,
}

impl ConflictResolver {
    pub fn new() -> Self {
        let mut strategies = HashMap::new();
        
        // Default strategies for different operation types
        strategies.insert("metadata".to_string(), ConflictResolutionStrategy::LastWriterWins);
        strategies.insert("file_data".to_string(), ConflictResolutionStrategy::FirstWriterWins);
        
        Self {
            resolution_strategies: strategies,
        }
    }
    
    /// Resolve a replication conflict
    pub async fn resolve_conflict(
        &self,
        _ack: &ReplicationAck,
        conflict_info: &ConflictInfo,
    ) -> Result<()> {
        match &conflict_info.resolution_strategy {
            ConflictResolutionStrategy::LastWriterWins => {
                debug!("Resolving conflict using last-writer-wins");
                // TODO: Implement last-writer-wins resolution
            }
            ConflictResolutionStrategy::FirstWriterWins => {
                debug!("Resolving conflict using first-writer-wins");
                // TODO: Implement first-writer-wins resolution
            }
            ConflictResolutionStrategy::MergeValues => {
                debug!("Resolving conflict using value merging");
                // TODO: Implement value merging resolution
            }
            ConflictResolutionStrategy::CustomResolution(strategy) => {
                debug!("Resolving conflict using custom strategy: {}", strategy);
                // TODO: Implement custom resolution
            }
        }
        
        Ok(())
    }
    
    /// Register a custom conflict resolution strategy
    pub fn register_strategy(&mut self, operation_type: String, strategy: ConflictResolutionStrategy) {
        self.resolution_strategies.insert(operation_type, strategy);
    }
}

#[cfg(test)]
mod tests {
    use super::*;
    use tempfile::tempdir;
    
    #[test]
    fn test_conflict_resolver_creation() {
        let resolver = ConflictResolver::new();
        assert!(resolver.resolution_strategies.contains_key("metadata"));
        assert!(resolver.resolution_strategies.contains_key("file_data"));
    }
    
    #[tokio::test]
    async fn test_replication_status() -> Result<()> {
        let config = MultiregionConfig::default();
        let hlc = Arc::new(RwLock::new(HybridLogicalClock::new(100)));
        let replicator = CrossRegionReplicator::new(config, hlc);
        
        let status = replicator.get_replication_status().await;
        assert!(status.is_empty()); // No peers configured in default config
        
        Ok(())
    }
}